--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <h1>Three STL Viewer</h1>
   <h3>created by <a href='https://github.com/ohpyupi' target='_blank'>ohpyupi</a></h3>
   <hr/>
-  <a class='btn'>
+  <a class='btn' href='https://github.com/ohpyupi/three-stl-viewer' target='_blank'>
     <i class="fab fa-github"></i> 
     Github
   </a>
